--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
 
     <!-- Theme CSS -->
     <link href="css/agency.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -56,13 +58,13 @@
                         <a class="page-scroll" href="#services">partments.io</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Open Projects</a>
+                        <a class="page-scroll" href="#portfolio">הזדמנויות השקעה</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Invest</a>
+                        <a class="page-scroll" href="#about">תהליך</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">צור קשר</a>
                     </li>
                 </ul>
             </div>
@@ -74,11 +76,10 @@
     <!-- Header -->
     <header>
         <div  class="container">
-            <div id="hello" class="intro-text">
-                <div class="intro-lead-in">תשואה גבוהה ו-סולידית</div>
-                <div class="intro-heading">השקעות נדל״ן בישראל</div>
-                <div class="intro-lead-in">(לכל כיס (כמעט</div>
-                <a href="#services" class="page-scroll btn btn-xl">התחל כאן</a>
+            <div class="intro-text">
+                <div class="intro-lead-in ">השקעות נדל״ן בשוק הישראלי החל מ-90 אלף ש״ח</div>
+                <div class="intro-heading ">פרטמנט מאפשר רכישה ומכירה של דירות על הנייר לקבוצות משקיעים</div>
+                <a href="#services" class="page-scroll btn btn-xl title">התחל כאן</a>
             </div>
         </div>
     </header>
@@ -89,7 +90,11 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">קונים ומוכרים דירות על הנייר בקבוצות</h2>
-                    <h3 class="section-subheading text-muted"></h3>
+                    <br />
+                    <h4 class="section-subheading text-muted"> ב-10 שנים האחרונות אנו עדים לפער שנוצר בין מחיר של דירה מקבלן על הנייר לאומת המחיר של אותה דירה בסיום בנייתה</h4>
+
+                    <br />
+                    <br />
                 </div>
             </div>
             <div class="row text-center">
@@ -99,7 +104,7 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">ביצוע רכישה ומימוש הנכס</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">אנו משקיעים בכל פרוייקט המוצע בפלטפורמה ומלווים את המשקעים עד למימוש העיסקה.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -107,7 +112,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">הרכבת קבוצות משקיעים פר נכס</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">במעמד החתימה תקבל בעלות ישירה בנכס, הערת אזהרה בטאבו על שמך ושקיפות מלאה.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -115,7 +120,7 @@
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">סינון יזם ופרוייקט</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">ברשותך אפשרות לבחור ממגוון פרוייקטי נדל״ן שנבחנו בקפידה.</p>
                 </div>
             </div>
         </div>
@@ -126,7 +131,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Portfolio</h2>
+                    <h2 class="section-heading">הזדמנויות השקעה</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
@@ -173,7 +178,7 @@
                         <p class="text-muted">Website Design</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <!-- <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -181,8 +186,8 @@
                             </div>
                         </div>
                         <img src="img/portfolio/golden.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
+                    </a> -->
+                    <!-- <div class="portfolio-caption">
                         <h4>Golden</h4>
                         <p class="text-muted">Website Design</p>
                     </div>
@@ -213,7 +218,7 @@
                     <div class="portfolio-caption">
                         <h4>Dreams</h4>
                         <p class="text-muted">Website Design</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -224,7 +229,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
+                    <h2 class="section-heading">תהליך השקעה</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
@@ -334,7 +339,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Us</h2>
+                    <h2 class="section-heading">צור קשר</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
@@ -497,7 +502,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 4 -->
+    Portfolio Modal 4
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -526,7 +531,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 5 -->
+    Portfolio Modal 5
     <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -555,7 +560,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 6 -->
+    Portfolio Modal 6
     <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
