--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>Partments, Solid Opportunities</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -66,6 +66,9 @@
                         <a class="page-scroll" href="#about">תהליך</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#questions">שאלות נפוצות</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">צור קשר</a>
                     </li>
                 </ul>
@@ -77,23 +80,101 @@
 
     <!-- Header -->
     <header>
-        <div  class="container">
-            <div class="intro-text">
-                <div class="intro-lead-in ">השקעות נדל״ן בשוק הישראלי החל מ-90 אלף ש״ח</div>
-                <div class="intro-heading ">פרטמנט מאפשר רכישה ומכירה של דירות על הנייר לקבוצות משקיעים</div>
-                <a href="#services" class="page-scroll btn btn-xl title">התחל כאן</a>
+        <div class="container">
+            <div class="intro-text above">
+                <div class="intro-heading " > Partments</div>
+                <div class="intro-lead-in" style="font-size: 3.5em;">השקעות נדל״ן בשוק הישראלי</div>
+                <div class="intro-heading " >  כרטיס הכניסה שלך לשוק הדנל״ן</div>
+                <a href="#services" class="page-scroll btn btn-xl title"> אפיק השקעה ייחודי</a>
             </div>
         </div>
     </header>
+
+    <!-- Who Are you? -->
+    <section id="whoareyou">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading"> ?מי אנחנו</h2>
+                    <h4 class="section-subheading text-muted"> לכולנו יש חלום להיות בעלים של נכס. כרגע זה לא מתאפשר, ומשכנתא לא באה בחשבון. חפשנו קשה מאד ובסוף מצאנו. מסלול שיקדם אותנו ליעד</h4>
+                    <br />
+                    <br />
+                    <br />
+                </div>
+            </div>
+
+            <div class = "row">
+
+   <div class = "col-sm-6 col-md-3">
+      <div class = "thumbnail">
+         <img src = "https://fb-s-b-a.akamaihd.net/h-ak-xpt1/v/t1.0-9/15895374_10154719747225479_1011842972203723082_n.jpg?oh=2bb085a3fa2752eb6390de8174a9061b&oe=5939F9DC&__gda__=1495673403_97273d40cf94f84ba4cabaf9dcdf7436" alt = "Generic placeholder thumbnail">
+      </div>
+
+      <div class = "caption">
+         <h3>אוריאל בכר</h3>
+         <p> חפשתי חלופה לפק״מ. בחנתי את שוק השכירות של דירות אך לא היה לי מספיק הון עצמי כדי לרכוש דירה</p>
+      </div>
+   </div>
+
+   <div class = "col-sm-6 col-md-3">
+      <div class = "thumbnail">
+         <img src = "https://fb-s-a-a.akamaihd.net/h-ak-xaf1/v/t1.0-9/66395_10202637653119237_1592092752_n.jpg?oh=f7481ef6925449b84c86e4a48e2bdd44&oe=597344BA&__gda__=1497032272_ec96ea0dddc0577e56babadd303582e3" alt = "Generic placeholder thumbnail">
+      </div>
+
+      <div class = "caption">
+         <h3>רועי דורון</h3>
+         <p> אישתי ואני הגענו לחסכון שמאפשר לקחת משכתנא ואיתה לרכוש דירה. רק המחשבה של עליית הריבית בארה״ב גורמת לי לשקשק מהרעיון</p>
+      </div>
+   </div>
+
+   <div class = "col-sm-6 col-md-3">
+      <div class = "thumbnail">
+         <img src = "https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-9/12376221_10153789891583540_7385791419151772815_n.jpg?oh=d42c0a8be2f1114735de8a453446269b&oe=5936CC49" alt = "Generic placeholder thumbnail">
+      </div>
+
+      <div class = "caption">
+         <h3> בן אורצ״רד</h3>
+         <p>מכירות וגלישה</p>
+      </div>
+   </div>
+
+       <div class = "col-sm-6 col-md-3">
+          <div class = "thumbnail">
+             <img src = "https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-9/15589481_10154868100907509_3306727374631750348_n.jpg?oh=4f20f391be6247608538ebb454b074df&oe=592F2851" alt = "Generic placeholder thumbnail">
+          </div>
+
+          <div class = "caption">
+             <h3>יניב יצחקי</h3>
+             <p> פרוייקטים והעולם</p>
+          </div>
+       </div>
+
+    </div>
+    <br /><br /><br />
+    <div class="container">
+        <div class="row">
+
+            <div class="col-lg-12 text-center">
+              <h2 class="section-heading"> ...במילים אחרות</h2>
+              <h2 class="section-heading">אנחנו זה</h2>
+              <h2 class="section-heading">.אתם</h2>
+            </div>
+        </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Services Section -->
     <section id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">קונים ומוכרים דירות על הנייר בקבוצות</h2>
+                    <h2 class="section-heading">  :הפתרון</h2>
+                    <h2 class="section-heading">  שלב א׳: קונים דירה על הנייר ב100% הון עצמי יחד עם קבוצת רוכשים</h2>
+                    <h2 class="section-heading"> שלב ב׳: מוכרים את הדירה לפני תום הבנייה</h2>
                     <br />
-                    <h4 class="section-subheading text-muted"> ב-10 שנים האחרונות אנו עדים לפער שנוצר בין מחיר של דירה מקבלן על הנייר לאומת המחיר של אותה דירה בסיום בנייתה</h4>
+                    <h4 class="section-subheading text-muted"> ב-10 שנים האחרונות אנו עדים לפער שנוצר בין מחיר של דירה מקבלן על הנייר לעומת המחיר של אותה דירה בסיום בנייתה</h4>
 
                     <br />
                     <br />
@@ -128,13 +209,14 @@
         </div>
     </section>
 
+
     <!-- Portfolio Grid Section -->
     <section id="portfolio" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">הזדמנויות השקעה</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">הצוות שלנו מושקע בכל אחד מהפרוייקטים האלה<h3>
                 </div>
             </div>
             <div class="row">
@@ -377,8 +459,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">צור קשר</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">נחזור אליך בהקדם</h2>
+                    <h3 class="section-subheading text-muted">או שתתקשר לבן - 0505607926 :)</h3>
                 </div>
             </div>
             <div class="row">
@@ -425,11 +507,11 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <!-- <li><a href="#"><i class="fa fa-twitter"></i></a> -->
                         </li>
                         <li><a href="#"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <!-- <li><a href="#"><i class="fa fa-linkedin"></i></a> -->
                         </li>
                     </ul>
                 </div>
