--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,6 @@
         <div class="container">
             <div class="intro-text above">
                 <div class="intro-heading " > Partments</div>
-                <div class="intro-lead-in" style="font-size: 3.5em;">השקעות נדל״ן בשוק הישראלי</div>
                 <div class="intro-heading " >  כרטיס הכניסה שלך לשוק הדנל״ן</div>
                 <a href="#services" class="page-scroll btn btn-xl title"> אפיק השקעה ייחודי</a>
             </div>
@@ -103,18 +102,9 @@
                 </div>
             </div>
 
-            <div class = "row">
+  <div class = "row">
 
-   <div class = "col-sm-6 col-md-3">
-      <div class = "thumbnail">
-         <img src = "https://fb-s-b-a.akamaihd.net/h-ak-xpt1/v/t1.0-9/15895374_10154719747225479_1011842972203723082_n.jpg?oh=2bb085a3fa2752eb6390de8174a9061b&oe=5939F9DC&__gda__=1495673403_97273d40cf94f84ba4cabaf9dcdf7436" alt = "Generic placeholder thumbnail">
-      </div>
 
-      <div class = "caption">
-         <h3>אוריאל בכר</h3>
-         <p> חפשתי חלופה לפק״מ. בחנתי את שוק השכירות של דירות אך לא היה לי מספיק הון עצמי כדי לרכוש דירה</p>
-      </div>
-   </div>
 
    <div class = "col-sm-6 col-md-3">
       <div class = "thumbnail">
@@ -129,12 +119,23 @@
 
    <div class = "col-sm-6 col-md-3">
       <div class = "thumbnail">
+         <img src = "https://fb-s-b-a.akamaihd.net/h-ak-xpt1/v/t1.0-9/15895374_10154719747225479_1011842972203723082_n.jpg?oh=2bb085a3fa2752eb6390de8174a9061b&oe=5939F9DC&__gda__=1495673403_97273d40cf94f84ba4cabaf9dcdf7436" alt = "Generic placeholder thumbnail">
+      </div>
+
+      <div class = "caption">
+         <h3>אוריאל בכר</h3>
+         <p>אני חוסך מגיל צעיר. התשואות באגח״ים נמוכות מאד. מניות זה מסוכן. חשבתי על קרקע חקלאית אבל זה מרגיש כמו הימור יותר מהשקעה.</p>
+      </div>
+   </div>
+
+   <div class = "col-sm-6 col-md-3">
+      <div class = "thumbnail">
          <img src = "https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-9/12376221_10153789891583540_7385791419151772815_n.jpg?oh=d42c0a8be2f1114735de8a453446269b&oe=5936CC49" alt = "Generic placeholder thumbnail">
       </div>
 
       <div class = "caption">
          <h3> בן אורצ״רד</h3>
-         <p>מכירות וגלישה</p>
+         <p>חפשתי חלופה לפק״מ. בחנתי את שוק השכירות של דירות אך לא היה לי מספיק הון עצמי כדי לרכוש דירה הכסף עדין בפק״מ</p>
       </div>
    </div>
 
@@ -145,7 +146,7 @@
 
           <div class = "caption">
              <h3>יניב יצחקי</h3>
-             <p> פרוייקטים והעולם</p>
+             <p> רב כספי בקרנות. פיזור זה דבר חשוב, לרכוש דירות לשפץ ולמכור מניב תשואה יפה אך מצריך עבודה במשרה מלאה. איפה בעולם הנדלן אפשר למצוא אפיק השקעה סקלבילי עם פיזור הולם?</p>
           </div>
        </div>
 
@@ -155,8 +156,8 @@
         <div class="row">
 
             <div class="col-lg-12 text-center">
-              <h2 class="section-heading"> ...במילים אחרות</h2>
-              <h2 class="section-heading">אנחנו זה</h2>
+              <h2 class="section-heading"> במילים אחרות</h2>
+              <h2 class="section-heading">...אנחנו זה</h2>
               <h2 class="section-heading">.אתם</h2>
             </div>
         </div>
