--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">צור קשר</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="#whoareyou">אודות</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -89,81 +92,7 @@
         </div>
     </header>
 
-    <!-- Who Are you? -->
-    <section id="whoareyou">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading"> ?מי אנחנו</h2>
-                    <h4 class="section-subheading text-muted"> לכולנו יש חלום להיות בעלים של נכס. כרגע זה לא מתאפשר, ומשכנתא לא באה בחשבון. חפשנו קשה מאד ובסוף מצאנו. מסלול שיקדם אותנו ליעד</h4>
-                    <br />
-                    <br />
-                    <br />
-                </div>
-            </div>
 
-  <div class = "row">
-
-
-
-   <div class = "col-sm-6 col-md-3">
-      <div class = "thumbnail">
-         <img src = "https://fb-s-a-a.akamaihd.net/h-ak-xaf1/v/t1.0-9/66395_10202637653119237_1592092752_n.jpg?oh=f7481ef6925449b84c86e4a48e2bdd44&oe=597344BA&__gda__=1497032272_ec96ea0dddc0577e56babadd303582e3" alt = "Generic placeholder thumbnail">
-      </div>
-
-      <div class = "caption">
-         <h3>רועי דורון</h3>
-         <p> אישתי ואני הגענו לחסכון שמאפשר לקחת משכתנא ואיתה לרכוש דירה. רק המחשבה של עליית הריבית בארה״ב גורמת לי לשקשק מהרעיון</p>
-      </div>
-   </div>
-
-   <div class = "col-sm-6 col-md-3">
-      <div class = "thumbnail">
-         <img src = "https://fb-s-b-a.akamaihd.net/h-ak-xpt1/v/t1.0-9/15895374_10154719747225479_1011842972203723082_n.jpg?oh=2bb085a3fa2752eb6390de8174a9061b&oe=5939F9DC&__gda__=1495673403_97273d40cf94f84ba4cabaf9dcdf7436" alt = "Generic placeholder thumbnail">
-      </div>
-
-      <div class = "caption">
-         <h3>אוריאל בכר</h3>
-         <p>אני חוסך מגיל צעיר. התשואות באגח״ים נמוכות מאד. מניות זה מסוכן. חשבתי על קרקע חקלאית אבל זה מרגיש כמו הימור יותר מהשקעה.</p>
-      </div>
-   </div>
-
-   <div class = "col-sm-6 col-md-3">
-      <div class = "thumbnail">
-         <img src = "https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-9/12376221_10153789891583540_7385791419151772815_n.jpg?oh=d42c0a8be2f1114735de8a453446269b&oe=5936CC49" alt = "Generic placeholder thumbnail">
-      </div>
-
-      <div class = "caption">
-         <h3> בן אורצ״רד</h3>
-         <p>חפשתי חלופה לפק״מ. בחנתי את שוק השכירות של דירות אך לא היה לי מספיק הון עצמי כדי לרכוש דירה הכסף עדין בפק״מ</p>
-      </div>
-   </div>
-
-       <div class = "col-sm-6 col-md-3">
-          <div class = "thumbnail">
-             <img src = "https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-9/15589481_10154868100907509_3306727374631750348_n.jpg?oh=4f20f391be6247608538ebb454b074df&oe=592F2851" alt = "Generic placeholder thumbnail">
-          </div>
-
-          <div class = "caption">
-             <h3>יניב יצחקי</h3>
-             <p> רב כספי בקרנות. פיזור זה דבר חשוב, לרכוש דירות לשפץ ולמכור מניב תשואה יפה אך מצריך עבודה במשרה מלאה. איפה בעולם הנדלן אפשר למצוא אפיק השקעה סקלבילי עם פיזור הולם?</p>
-          </div>
-       </div>
-
-    </div>
-    <br /><br /><br />
-    <div class="container">
-        <div class="row">
-
-            <div class="col-lg-12 text-center">
-              <h2 class="section-heading"> במילים אחרות</h2>
-              <h2 class="section-heading">...אנחנו זה</h2>
-              <h2 class="section-heading">.אתם</h2>
-            </div>
-        </div>
-            </div>
-        </div>
-    </section>
 
 
     <!-- Services Section -->
@@ -171,9 +100,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">  :הפתרון</h2>
-                    <h2 class="section-heading">  שלב א׳: קונים דירה על הנייר ב100% הון עצמי יחד עם קבוצת רוכשים</h2>
-                    <h2 class="section-heading"> שלב ב׳: מוכרים את הדירה לפני תום הבנייה</h2>
+                    <h2 class="section-heading">  :שלב א׳</h2>
+                    <h2 class="section-heading"> קונים דירה על הנייר ב100% הון עצמי יחד עם קבוצת רוכשים</h2>
+                    <h2 class="section-heading">  :שלב ב׳</h2>
+                    <h2 class="section-heading"> מוכרים את הדירה לפני תום הבנייה</h2>
                     <br />
                     <h4 class="section-subheading text-muted"> ב-10 שנים האחרונות אנו עדים לפער שנוצר בין מחיר של דירה מקבלן על הנייר לעומת המחיר של אותה דירה בסיום בנייתה</h4>
 
@@ -496,6 +426,81 @@
                         </div>
                     </form>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Who Are you? -->
+    <section id="whoareyou">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading"> ?מי אנחנו</h2>
+                    <br />
+                    <br />
+                    <br />
+                </div>
+            </div>
+
+  <div class = "row">
+
+
+
+   <div class = "col-sm-6 col-md-3">
+      <div class = "thumbnail">
+         <img src = "https://fb-s-a-a.akamaihd.net/h-ak-xaf1/v/t1.0-9/66395_10202637653119237_1592092752_n.jpg?oh=f7481ef6925449b84c86e4a48e2bdd44&oe=597344BA&__gda__=1497032272_ec96ea0dddc0577e56babadd303582e3" alt = "Generic placeholder thumbnail">
+      </div>
+
+      <div class = "caption">
+         <h3>רועי דורון</h3>
+         <p> אישתי ואני הגענו לחסכון שמאפשר לקחת משכתנא ואיתה לרכוש דירה. רק המחשבה של עליית הריבית בארה״ב גורמת לי לשקשק מהרעיון</p>
+      </div>
+   </div>
+
+   <div class = "col-sm-6 col-md-3">
+      <div class = "thumbnail">
+         <img src = "https://fb-s-b-a.akamaihd.net/h-ak-xpt1/v/t1.0-9/15895374_10154719747225479_1011842972203723082_n.jpg?oh=2bb085a3fa2752eb6390de8174a9061b&oe=5939F9DC&__gda__=1495673403_97273d40cf94f84ba4cabaf9dcdf7436" alt = "Generic placeholder thumbnail">
+      </div>
+
+      <div class = "caption">
+         <h3>אוריאל בכר</h3>
+         <p>אני חוסך מגיל צעיר. התשואות באגח״ים נמוכות מאד. מניות זה מסוכן. חשבתי על קרקע חקלאית אבל זה מרגיש כמו הימור יותר מהשקעה.</p>
+      </div>
+   </div>
+
+   <div class = "col-sm-6 col-md-3">
+      <div class = "thumbnail">
+         <img src = "https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-9/12376221_10153789891583540_7385791419151772815_n.jpg?oh=d42c0a8be2f1114735de8a453446269b&oe=5936CC49" alt = "Generic placeholder thumbnail">
+      </div>
+
+      <div class = "caption">
+         <h3> בן אורצ״רד</h3>
+         <p>חפשתי חלופה לפק״מ. בחנתי את שוק השכירות של דירות אך לא היה לי מספיק הון עצמי כדי לרכוש דירה הכסף עדין בפק״מ</p>
+      </div>
+   </div>
+
+       <div class = "col-sm-6 col-md-3">
+          <div class = "thumbnail">
+             <img src = "https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-9/15589481_10154868100907509_3306727374631750348_n.jpg?oh=4f20f391be6247608538ebb454b074df&oe=592F2851" alt = "Generic placeholder thumbnail">
+          </div>
+
+          <div class = "caption">
+             <h3>יניב יצחקי</h3>
+             <p> רב כספי בקרנות. פיזור זה דבר חשוב, לרכוש דירות לשפץ ולמכור מניב תשואה יפה אך מצריך עבודה במשרה מלאה. איפה בעולם הנדלן אפשר למצוא אפיק השקעה סקלבילי עם פיזור הולם?</p>
+          </div>
+       </div>
+
+    </div>
+    <br /><br /><br />
+    <div class="container">
+        <div class="row">
+
+            <div class="col-lg-12 text-center">
+              <h2 class="section-heading"> במילים אחרות</h2>
+              <h2 class="section-heading">...אנחנו זה</h2>
+              <h2 class="section-heading">.אתם</h2>
+            </div>
+        </div>
             </div>
         </div>
     </section>
