--- a/public/index.html
+++ b/public/index.html
@@ -258,10 +258,10 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4 class="subheading">מפגש ראשוני</h4>
+                                    <h4 class="subheading">התקשרות ראשונית</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">שיחה טלפונית על מנת לוודא תאום ציפיות, מפגש פרונטלי להצגת הפרוייקטים לעומק ובחירת פרוייקט.</p>
+                                  <p class="text-muted"> שיחה טלפונית לקבלת פרטים ראשוניים לגבי הנכס והפלטפורמה לטובת תיאום פגישה.</p>
                                 </div>
                             </div>
                         </li>
@@ -271,10 +271,13 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4 class="subheading"> הסכם שותפות וייפוי כח</h4>
+                                    <h4 class="subheading"> מליוי בקשת רכישה</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">על מנת לשמור על שלום בית בין הרוכשים נחתום על הסכם שותפות עם כל סוגי המקרים תגובות למינהן על מנת להבטיח תגובה מהירה וזריזה ולחסוך דיוניםע שעלולים לעקב ולפגוע בקבוצה</p>
+                                    <p class="text-muted">פגישה פרונטלית ביחד עם ראש השיווק בפרוייקט זה של קבוצת יצחקי ומילוי בקשת רכישה לפי המסלול להשקעה (לדבר עם יצחקי בנוגע לתיאום והשמת בן אורצרד לפגישות במשרד).
+חתימה היא מול היזם
+                                    </p>
+
                                 </div>
                             </div>
                         </li>
@@ -287,7 +290,9 @@
                                     <h4 class="subheading">חתימה מול היזם</h4>
                                 </div>
                                 <div class="timeline-body">
-                                  <p class="text-muted">בשלב זה נחתום על הסכם רכישה מול יזם הפרוייקט. נעביר את סכום הרכישה לפי אפיק ההשקעה הנבחר לחשבון נאמנות אצל עורכי הדין</p>
+                                  <p class="text-muted">
+                                    בשלב זה יצור עמכם קשר עו״ד ממשרד הרצוג פוקס נאמן / גולדפרב בעל שם עולמי על מנת להחתים אתכם על הסכם שותפות אשר מסדיר את הליך קניית ומכירת הנכס.
+                                  </p>
                                 </div>
                             </div>
                         </li>
