--- a/public/index.html
+++ b/public/index.html
@@ -158,12 +158,12 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/img/קבוצת יצחקי/רחובות/Screen Shot 2017-02-16 at 12.48.34 PM.png" class="img-responsive" alt="">
+                        <!-- <img src="/img/קבוצת יצחקי/רחובות/Screen Shot 2017-02-16 at 12.48.34 PM.png" class="img-responsive" alt=""> -->
                     </a>
                     <div class="portfolio-caption">
-                        <h4>elite רחובות</h4>
+                        <!-- <h4>elite רחובות</h4>
                         <p class="text-muted">השקעה החל מ90 אלף ש״ח</p>
-                        <p class="text-muted">תשואה צפוייה כ-20%</p>
+                        <p class="text-muted">תשואה צפוייה כ-20%</p> -->
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -173,25 +173,31 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/startup-framework.png" class="img-responsive" alt="">
+                        <!-- <img src="img/portfolio/startup-framework.png" class="img-responsive" alt=""> -->
+                        <img src="/img/קבוצת יצחקי/רחובות/Screen Shot 2017-02-16 at 12.48.34 PM.png" class="img-responsive" alt="">
+
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Startup Framework</h4>
-                        <p class="text-muted">Website Design</p>
+                        <!-- <h4>Startup Framework</h4>
+                        <p class="text-muted">Website Design</p> -->
+                        <h4>elite רחובות</h4>
+                        <p class="text-muted">השקעה החל מ90 אלף ש״ח</p>
+                        <p class="text-muted">תשואה צפוייה כ-20%</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <!-- <img src="img/portfolio/treehouse.png" class="img-responsive" alt=""> -->
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Treehouse</h4>
-                        <p class="text-muted">Website Design</p>
+                        <!-- <h4>Treehouse</h4>
+                        <p class="text-muted">Website Design</p> -->
                     </div>
                 </div>
                 <!-- <div class="col-md-4 col-sm-6 portfolio-item">
@@ -274,9 +280,10 @@
                                     <h4 class="subheading"> מליוי בקשת רכישה</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">פגישה פרונטלית ביחד עם ראש השיווק בפרוייקט זה של קבוצת יצחקי ומילוי בקשת רכישה לפי המסלול להשקעה (לדבר עם יצחקי בנוגע לתיאום והשמת בן אורצרד לפגישות במשרד).
-חתימה היא מול היזם
+                                    <p class="text-muted">
+                                      פגישה פרונטלית ביחד עם ראש השיווק בפרוייקט זה של קבוצת יצחקי ומילוי בקשת רכישה לפי המסלול השקעה.
                                     </p>
+        
 
                                 </div>
                             </div>
