--- a/public/index.html
+++ b/public/index.html
@@ -57,22 +57,22 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">partments.io</a>
+                        <a class="page-scroll nav-shadow" href="#services">partments.io</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">הזדמנויות השקעה</a>
+                        <a class="page-scroll nav-shadow" href="#portfolio">הזדמנויות השקעה</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">תהליך</a>
+                        <a class="page-scroll nav-shadow" href="#about">תהליך</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#questions">שאלות נפוצות</a>
+                        <a class="page-scroll nav-shadow" href="#questions">שאלות נפוצות</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">צור קשר</a>
+                        <a class="page-scroll nav-shadow" href="#contact">צור קשר</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#whoareyou">אודות</a>
+                        <a class="page-scroll nav-shadow" href="#whoareyou">אודות</a>
                     </li>
                 </ul>
             </div>
@@ -83,13 +83,22 @@
 
     <!-- Header -->
     <header>
+    <div class="bg-txt-blk">
         <div class="container">
             <div class="intro-text above">
-                <div class="intro-heading " > Partments</div>
-                <div class="intro-heading " >  כרטיס הכניסה שלך לשוק הדנל״ן</div>
+                <div class="intro-heading" >Partments</div>
+                <div class="intro-heading" >החלק שלך בנדל"ן</div>
+                <div>
+                    <span><h4>
+                        ב-1990 יצאה רכבת הנדל"ן מהתחנה. מי שעלה בזמן, הגיע לקרון הראשון.<br>
+                        מי שלא עלה, יכול היה רק לנסות לקפוץ על רכבת דוהרת.<br>
+                        עכשיו, אנו מאפשרים לכל אחת ואחד לעלות על הרכבת- ולהגיע עד לקרון הראשון.<br>
+                    </h4></span>
+                </div>
                 <a href="#services" class="page-scroll btn btn-xl title"> אפיק השקעה ייחודי</a>
             </div>
         </div>
+    </div>
     </header>
 
 
@@ -101,11 +110,14 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">  :שלב א׳</h2>
-                    <h2 class="section-heading"> קונים דירה על הנייר ב100% הון עצמי יחד עם קבוצת רוכשים</h2>
+                    <h2 class="section-heading">בוחרים חלק בנכס לרכישה</h2><br>
                     <h2 class="section-heading">  :שלב ב׳</h2>
-                    <h2 class="section-heading"> מוכרים את הדירה לפני תום הבנייה</h2>
+                    <h2 class="section-heading">רוכשים את החלק - על שמך</h2><br>
+                    <h2 class="section-heading">  :שלב ג׳</h2>
+                    <h2 class="section-heading">מוכרים את הנכס ברווח</h2><br>
                     <br />
-                    <h4 class="section-subheading text-muted"> ב-10 שנים האחרונות אנו עדים לפער שנוצר בין מחיר של דירה מקבלן על הנייר לעומת המחיר של אותה דירה בסיום בנייתה</h4>
+                    <h4 class="section-subheading text-muted">אנו בוחרים כל פרוייקט בקפידה לפי רזומה ואיתנות פיננסית של היזם.<br>
+                    אנו מביאים את הפרוייקטים המבטיחים ביותר בשוק הנדל"ן ומלווים אתכם עד למימוש הנכס.</h4>
 
                     <br />
                     <br />
@@ -123,18 +135,18 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">הרכבת קבוצות משקיעים פר נכס</h4>
-                    <p class="text-muted">במעמד החתימה תקבל בעלות ישירה בנכס, הערת אזהרה בטאבו על שמך ושקיפות מלאה.</p>
+                    <h4 class="service-heading">ביטחון לאורך הדרך</h4>
+                    <p class="text-muted">הרוכשים זוכים לערבות בנקאית בהתאם לחוק, ולליווי משפטי צמוד מהרכישה ועוד המכירה.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-dollar fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">סינון יזם ופרוייקט</h4>
-                    <p class="text-muted">ברשותך אפשרות לבחור ממגוון פרוייקטי נדל״ן שנבחנו בקפידה.</p>
+                    <h4 class="service-heading">הנגשת הנדל"ן</h4>
+                    <p class="text-muted">אנו מאפשרים לכל אחת ואחד להשקיע בנכס לפי יכולתו</p>
                 </div>
             </div>
         </div>
