--- a/public/index.html
+++ b/public/index.html
@@ -57,14 +57,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll nav-shadow" href="#services">partments.io</a>
+                        <a class="page-scroll nav-shadow" href="#about">partments.io</a>
                     </li>
-                    <li>
-                        <a class="page-scroll nav-shadow" href="#portfolio">הזדמנויות השקעה</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll nav-shadow" href="#about">תהליך</a>
-                    </li>
+
+
                     <li>
                         <a class="page-scroll nav-shadow" href="#questions">שאלות נפוצות</a>
                     </li>
@@ -88,175 +84,16 @@
             <div class="intro-text above">
                 <div class="intro-heading" >Partments</div>
                 <div class="intro-heading" >החלק שלך בנדל"ן</div>
-                <div>
-                    <span><h4>
-                        ב-1990 יצאה רכבת הנדל"ן מהתחנה. מי שעלה בזמן, הגיע לקרון הראשון.<br>
-                        מי שלא עלה, יכול היה רק לנסות לקפוץ על רכבת דוהרת.<br>
-                        עכשיו, אנו מאפשרים לכל אחת ואחד לעלות על הרכבת- ולהגיע עד לקרון הראשון.<br>
-                    </h4></span>
-                </div>
+
+
+
                 <a href="#services" class="page-scroll btn btn-xl title"> אפיק השקעה ייחודי</a>
+
             </div>
         </div>
     </div>
     </header>
 
-
-
-
-    <!-- Services Section -->
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">  :שלב א׳</h2>
-                    <h2 class="section-heading">בוחרים חלק בנכס לרכישה</h2><br>
-                    <h2 class="section-heading">  :שלב ב׳</h2>
-                    <h2 class="section-heading">רוכשים את החלק - על שמך</h2><br>
-                    <h2 class="section-heading">  :שלב ג׳</h2>
-                    <h2 class="section-heading">מוכרים את הנכס ברווח</h2><br>
-                    <br />
-                    <h4 class="section-subheading text-muted">אנו בוחרים כל פרוייקט בקפידה לפי רזומה ואיתנות פיננסית של היזם.<br>
-                    אנו מביאים את הפרוייקטים המבטיחים ביותר בשוק הנדל"ן ומלווים אתכם עד למימוש הנכס.</h4>
-
-                    <br />
-                    <br />
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">ביצוע רכישה ומימוש הנכס</h4>
-                    <p class="text-muted">אנו משקיעים בכל פרוייקט המוצע בפלטפורמה ומלווים את המשקעים עד למימוש העיסקה.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">ביטחון לאורך הדרך</h4>
-                    <p class="text-muted">הרוכשים זוכים לערבות בנקאית בהתאם לחוק, ולליווי משפטי צמוד מהרכישה ועוד המכירה.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-dollar fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">הנגשת הנדל"ן</h4>
-                    <p class="text-muted">אנו מאפשרים לכל אחת ואחד להשקיע בנכס לפי יכולתו</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- Portfolio Grid Section -->
-    <section id="portfolio" class="bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">הזדמנויות השקעה</h2>
-                    <h3 class="section-subheading text-muted">הצוות שלנו מושקע בכל אחד מהפרוייקטים האלה<h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <!-- <img src="/img/קבוצת יצחקי/רחובות/Screen Shot 2017-02-16 at 12.48.34 PM.png" class="img-responsive" alt=""> -->
-                    </a>
-                    <div class="portfolio-caption">
-                        <!-- <h4>elite רחובות</h4>
-                        <p class="text-muted">השקעה החל מ90 אלף ש״ח</p>
-                        <p class="text-muted">תשואה צפוייה כ-20%</p> -->
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <!-- <img src="img/portfolio/startup-framework.png" class="img-responsive" alt=""> -->
-                        <img src="/img/קבוצת יצחקי/רחובות/Screen Shot 2017-02-16 at 12.48.34 PM.png" class="img-responsive" alt="">
-
-                    </a>
-                    <div class="portfolio-caption">
-                        <!-- <h4>Startup Framework</h4>
-                        <p class="text-muted">Website Design</p> -->
-                        <h4>elite רחובות</h4>
-                        <p class="text-muted">השקעה החל מ90 אלף ש״ח</p>
-                        <p class="text-muted">תשואה צפוייה כ-20%</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <!-- <img src="img/portfolio/treehouse.png" class="img-responsive" alt=""> -->
-                    </a>
-                    <div class="portfolio-caption">
-                        <!-- <h4>Treehouse</h4>
-                        <p class="text-muted">Website Design</p> -->
-                    </div>
-                </div>
-                <!-- <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/golden.png" class="img-responsive" alt="">
-                    </a> -->
-                    <!-- <div class="portfolio-caption">
-                        <h4>Golden</h4>
-                        <p class="text-muted">Website Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/escape.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Escape</h4>
-                        <p class="text-muted">Website Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Dreams</h4>
-                        <p class="text-muted">Website Design</p>
-                    </div> -->
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- About Section -->
     <section id="about">
@@ -264,7 +101,15 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">תהליך השקעה</h2>
+                    <div>
+                          <h4>
+                            ב-1990 יצאה רכבת הנדל"ן מהתחנה. מי שעלה בזמן, הגיע לקרון הראשון.<br>
+                            מי שלא עלה, יכול היה רק לנסות לקפוץ על רכבת דוהרת.<br>
+                            עכשיו, אנו מאפשרים לכל אחת ואחד לעלות על הרכבת- ולהגיע עד לקרון הראשון.<br>
+                        </h4>
+                    </div>
                     <h3 class="section-subheading text-muted">להלן פירוט אבני הדרך העיקריות</h3>
+
                 </div>
             </div>
             <div class="row">
@@ -295,7 +140,7 @@
                                     <p class="text-muted">
                                       פגישה פרונטלית ביחד עם ראש השיווק בפרוייקט זה של קבוצת יצחקי ומילוי בקשת רכישה לפי המסלול השקעה.
                                     </p>
-        
+
 
                                 </div>
                             </div>
@@ -402,7 +247,55 @@
                 </div>
               </uib-accordion>
               </div>
+
             </div>
+
+                <section id="services">
+                    <div class="container">
+                        <!-- <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <h2 class="section-heading">  :שלב א׳</h2>
+                                <h2 class="section-heading">בוחרים חלק בנכס לרכישה</h2><br>
+                                <h2 class="section-heading">  :שלב ב׳</h2>
+                                <h2 class="section-heading">רוכשים את החלק - על שמך</h2><br>
+                                <h2 class="section-heading">  :שלב ג׳</h2>
+                                <h2 class="section-heading">מוכרים את הנכס ברווח</h2><br>
+                                <br />
+                                <h4 class="section-subheading text-muted">אנו בוחרים כל פרוייקט בקפידה לפי רזומה ואיתנות פיננסית של היזם.<br>
+                                אנו מביאים את הפרוייקטים המבטיחים ביותר בשוק הנדל"ן ומלווים אתכם עד למימוש הנכס.</h4>
+
+                                <br />
+                                <br />
+                            </div>
+                        </div> -->
+                        <div class="row text-center">
+                            <div class="col-md-4">
+                                <span class="fa-stack fa-4x">
+                                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                                    <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                                </span>
+                                <h4 class="service-heading">ביצוע רכישה ומימוש הנכס</h4>
+                                <p class="text-muted">אנו משקיעים בכל פרוייקט המוצע בפלטפורמה ומלווים את המשקעים עד למימוש העיסקה.</p>
+                            </div>
+                            <div class="col-md-4">
+                                <span class="fa-stack fa-4x">
+                                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                                    <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                                </span>
+                                <h4 class="service-heading">ביטחון לאורך הדרך</h4>
+                                <p class="text-muted">הרוכשים זוכים לערבות בנקאית בהתאם לחוק, ולליווי משפטי צמוד מהרכישה ועוד המכירה.</p>
+                            </div>
+                            <div class="col-md-4">
+                                <span class="fa-stack fa-4x">
+                                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                                    <i class="fa fa-dollar fa-stack-1x fa-inverse"></i>
+                                </span>
+                                <h4 class="service-heading">הנגשת הנדל"ן</h4>
+                                <p class="text-muted">אנו מאפשרים לכל אחת ואחד להשקיע בנכס לפי יכולתו</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
           <div class="col-lg-3">
           </div>
         </div>
@@ -414,7 +307,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">נחזור אליך בהקדם</h2>
+<h2 class="section-heading">אנא צור קשר על מנת לקבל מידע אודות הפרוייקטים</h2>
                     <h3 class="section-subheading text-muted">או שתתקשר לבן - 0505607926 :)</h3>
                 </div>
             </div>
@@ -445,7 +338,7 @@
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
+                                <button type="submit" class="btn btn-xl">שלח הודעה</button>
                             </div>
                         </div>
                     </form>
@@ -523,6 +416,8 @@
               <h2 class="section-heading"> במילים אחרות</h2>
               <h2 class="section-heading">...אנחנו זה</h2>
               <h2 class="section-heading">.אתם</h2>
+              <a href="#contact"> <button type="submit" class="btn btn-xl">צור קשר</button> </a>
+
             </div>
         </div>
             </div>
