--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
 
 <head>
 
@@ -85,12 +85,36 @@
             <div class="intro-text above">
                 <div class="intro-heading" >Partments</div>
                 <div class="intro-heading" >החלק שלך בנדל"ן</div>
-
-
-
-                <a href="#services" class="page-scroll btn btn-xl title"> אפיק השקעה ייחודי</a>
-
+                <div class="container">
+                  <div class="row text-center">
+                    <br />
+                      <div class="col-md-3" style="margin-left: 14%;">
+                          <span class="fa-stack fa-4x">
+                              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                              <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                          </span>
+                          <h4 class="service-heading">הנכס נמכר בתום הבנייה הקרן והרווחים מחולקים למשקיע</h4>
+                      </div>
+                      <div class="col-md-3">
+                          <span class="fa-stack fa-4x">
+                              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                              <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                          </span>
+                          <h4 class="service-heading">נכס ״על הנייר״ נירכש מקבל״ן</h4>
+                      </div>
+                      <div class="col-md-3">
+                          <span class="fa-stack fa-4x">
+                              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                              <i class="fa fa-dollar fa-stack-1x fa-inverse"></i>
+                          </span>
+                          <h4 class="service-heading">המשקיע בוחר פרוייקט ואחד משלושה מסלולי השקעה</h4>
+                     </div>
+              </div>
             </div>
+                <div>
+                  <a href="#contact" class="page-scroll btn btn-xl title"> אפיק השקעה ייחודי</a>
+                </div>
+
         </div>
     </div>
     </header>
@@ -100,10 +124,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-    <h2 class="section-heading">אנא צור קשר על מנת לקבל מידע אודות הפרוייקטים</h2>
-                    <h3 class="section-subheading text-muted">או שתתקשר לבן - 0505607926 :)</h3>
+    <h2 class="section-heading">מלא תופס הרשמה לקבלת פרטים נוספים</h2>
                 </div>
             </div>
+            <br />
+            <br />
             <div class="row">
                 <div class="col-lg-12">
                     <form name="sentMessage" id="contactForm" novalidate>
@@ -112,15 +137,15 @@
                           </div>
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <input style="font-size:25px" type="text" class="form-control" placeholder="שם מלא *" id="name" required data-validation-required-message="Please enter your name.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <input style="font-size:25px" type="email" class="form-control" placeholder="כתובת מייל *" id="email" required data-validation-required-message="Please enter your email address.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <input style="font-size:25px" type="tel" class="form-control" placeholder="מספר טלפון *" id="phone" required data-validation-required-message="Please enter your phone number.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
@@ -133,7 +158,7 @@
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">שלח הודעה</button>
+                                <button type="submit" class="btn btn-xl">שלח פרטים</button>
                             </div>
                         </div>
                     </form>
@@ -155,14 +180,14 @@
                             עכשיו, אנו מאפשרים לכל אחת ואחד לעלות על הרכבת- ולהגיע עד לקרון הראשון.<br>
                         </h4>
                     </div>
-                    <h3 class="section-subheading text-muted">להלן פירוט אבני הדרך העיקריות</h3>
+                    <h3 class="section-subheading text-muted"></h3>
 
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
-                        <li>
+                        <!-- <li>
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
                             </div>
@@ -174,8 +199,8 @@
                                   <p class="text-muted"> שיחה טלפונית לקבלת פרטים ראשוניים לגבי הנכס והפלטפורמה לטובת תיאום פגישה.</p>
                                 </div>
                             </div>
-                        </li>
-                        <li class="timeline-inverted">
+                        </li> -->
+                        <li class="timeline-image">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
                             </div>
@@ -187,8 +212,6 @@
                                     <p class="text-muted">
                                       פגישה פרונטלית ביחד עם ראש השיווק בפרוייקט זה של קבוצת יצחקי ומילוי בקשת רכישה לפי המסלול השקעה.
                                     </p>
-
-
                                 </div>
                             </div>
                         </li>
@@ -207,7 +230,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
+                        <li class="timeline-image">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
                             </div>
@@ -216,16 +239,18 @@
                                     <h4 class="subheading">מימוש הנכס</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">לאחר תום הבנייה הדירה תשווק על ידינו ותמכר במחיר שנקבע מראש לפי תמהיל ההשעה. לאחר המחירה הקרן והרווחים יועברו לחברי הקבוצה</p>
+                                  <p class="text-muted">לאחר תום הבנייה הדירה תשווק על ידינו ותמכר במחיר שנקבע מראש לפי תמהיל ההשעה. לאחר המחירה הקרן והרווחים יועברו לחברי הקבוצה</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
+                          <a href="#contact">
                             <div class="timeline-image">
-                                <h4>כך חלק
-                                    <br> מעיסקה
-                                    <br>מניבה!</h4>
+                                <h4>לחץ כאן
+                                <br> לרכשית (חלק)
+                                <br>מדירה להשקעה!</h4>
                             </div>
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -266,31 +291,7 @@
     <section id="questions">
       <div class="container">
         <div class="row">
-          <div class="row text-center">
-              <div class="col-md-4">
-                  <span class="fa-stack fa-4x">
-                      <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                      <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                  </span>
-                  <h4 class="service-heading">ביצוע רכישה ומימוש הנכס</h4>
-                  <p class="text-muted">אנו משקיעים בכל פרוייקט המוצע בפלטפורמה ומלווים את המשקעים עד למימוש העיסקה.</p>
-              </div>
-              <div class="col-md-4">
-                  <span class="fa-stack fa-4x">
-                      <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                      <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                  </span>
-                  <h4 class="service-heading">ביטחון לאורך הדרך</h4>
-                  <p class="text-muted">הרוכשים זוכים לערבות בנקאית בהתאם לחוק, ולליווי משפטי צמוד מהרכישה ועוד המכירה.</p>
-              </div>
-              <div class="col-md-4">
-                  <span class="fa-stack fa-4x">
-                      <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                      <i class="fa fa-dollar fa-stack-1x fa-inverse"></i>
-                  </span>
-                  <h4 class="service-heading">הנגשת הנדל"ן</h4>
-                  <p class="text-muted">אנו מאפשרים לכל אחת ואחד להשקיע בנכס לפי יכולתו</p>
-              </div>
+
           </div>
           <div class="col-lg-3">
           </div>
@@ -338,7 +339,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading"> ?מי אנחנו</h2>
+                    <h2 class="section-heading"> מי אנחנו?</h2>
                     <br />
                     <br />
                     <br />
@@ -400,9 +401,9 @@
 
             <div class="col-lg-12 text-center">
               <h2 class="section-heading"> במילים אחרות</h2>
-              <h2 class="section-heading">...אנחנו זה</h2>
-              <h2 class="section-heading">.אתם</h2>
-              <a href="#contact"> <button type="submit" class="btn btn-xl">צור קשר</button> </a>
+              <h2 class="section-heading">אנחנו זה אתם ...</h2>
+              <h2 class="section-heading">אתם.</h2>
+              <a href="#contact"> <button type="submit" class="btn btn-xl">צור קשר עכשיו !</button> </a>
 
             </div>
         </div>
