--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about">
+    <section id="main">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
