--- a/public/index.html
+++ b/public/index.html
@@ -87,31 +87,28 @@
                 <div class="intro-heading" >החלק שלך בנדל"ן</div>
                 <div class="container">
                   <div class="row text-center">
-                    <br />
+
                       <div class="col-md-3" style="margin-left: 14%;">
-                          <span class="fa-stack fa-4x">
-                              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                              <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                          <span>
+                              <img src="img/header_icons/3.png" />
                           </span>
                           <h4 class="service-heading">הנכס נמכר בתום הבנייה הקרן והרווחים מחולקים למשקיע</h4>
                       </div>
                       <div class="col-md-3">
-                          <span class="fa-stack fa-4x">
-                              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                              <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                          <span>
+                              <img src="img/header_icons/2.png" />
                           </span>
-                          <h4 class="service-heading">נכס ״על הנייר״ נירכש מקבל״ן</h4>
+                          <h4 class="service-heading">רוכשים בהנחה נכס ״על הנייר״ ישירות מקבל״ן</h4>
                       </div>
                       <div class="col-md-3">
-                          <span class="fa-stack fa-4x">
-                              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                              <i class="fa fa-dollar fa-stack-1x fa-inverse"></i>
+                          <span>
+                              <img src="img/header_icons/1.png" />
                           </span>
-                          <h4 class="service-heading">המשקיע בוחר פרוייקט ואחד משלושה מסלולי השקעה</h4>
+                          <h4 class="service-heading">בוחרים מסלול השקעה בפרוייקט נדל״ן</h4>
                      </div>
               </div>
             </div>
-                <div>
+                <div style="padding-top: 3%;">
                   <a href="#contact" class="page-scroll btn btn-xl title"> אפיק השקעה ייחודי</a>
                 </div>
 
